# opendeck-ajazz

./: .editorconfig  Dockerfile  README.md  package.json  product_name.txt
.github/workflows/: lint-app.yml  lint-web.yml  release.yml  web.yaml
plugins/com.amansprojects.starterpack.sdPlugin/src/: switch_profile.rs
scripts/: build.sh  lint-app.sh  lint-web.sh  release.sh
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/bundle/: 40-ajazz.rules  opendeck-ajazz.desktop  opendeck-ajazz.metainfo.xml
src-tauri/lib/ajazz-sdk/: .gitignore  40-mirabox.rules  Cargo.toml  README.md  rustfmt.toml
src-tauri/lib/ajazz-sdk/.github/workflows/: qa.yaml
src-tauri/lib/ajazz-sdk/examples/: boot_logo.rs  events.rs
src-tauri/lib/ajazz-sdk/examples/pizza/: Cargo.toml
src-tauri/lib/ajazz-sdk/examples/pizza/src/: config.rs  display.rs  game_state.rs  main.rs
src-tauri/lib/ajazz-sdk/examples/screen_mirroring/: Cargo.toml
src-tauri/lib/ajazz-sdk/examples/screen_mirroring/src/: layout.rs  main.rs
src-tauri/lib/ajazz-sdk/src/: asynchronous.rs  device.rs  hid.rs  images.rs  info.rs  lib.rs  util.rs
src-tauri/lib/ajazz-sdk/src/protocol/: codes.rs  mod.rs  parser.rs  request.rs
src-tauri/src/: ajazz.rs  main.rs
src-tauri/src/events/inbound/: mod.rs
src-tauri/src/events/outbound/: devices.rs
src-tauri/src/store/: mod.rs
src/components/: SettingsView.svelte
src/lib/: settings.ts
web/: package.json
web/src/routes/(redirects)/download/: +page.server.ts
web/src/routes/(root)/: +page.svelte  mentions.json
web/src/routes/(root)/docs/: +page.svelte
